--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
-
+    <link rel="shortcut icon" type="imagex/png" href="img/BBCDoctorWhoTardis2021.1 - Copia.ICO">
     <title>DOCTORFLIX!</title>
 </head>
 <body>
