--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <!--owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
-    <link rel="shortcut icon" type="imagex/png" href="img/BBCDoctorWhoTardis2021.1 - Copia.ICO">
+	<link rel="shortcut icon" type="imagex/png" href="img/BBCDoctorWhoTardis2021.1 - Copia.ICO">
     <title>DOCTORFLIX!</title>
 </head>
 <body>
     <header>
+	
         <div class="container">
             <h2 class="logo">DOCTORFLIX!</h2><img class="tardis"src="img\BBCDoctorWhoTardis2021.1.png">
             <nav>
@@ -174,7 +175,19 @@
                 </div>
         </div>
     </div>
-	
+	   <footer>
+    <div class="container">
+      <div class="content">
+        <h4>Criado Por Guilherme Paiola de Castro Lima</h4>
+        <ul class="criador">
+          <li><a href="https://beacons.ai/guilhermepdcl">Redes</a></li>
+          <li><a href="https://github.com/GuiPCL">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/guilherme-paiola-de-castro-lima/">Linkedin</a></li>
+          <li><a href="https://www.instagram.com/guipcl/">Instagram</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
 
 
