--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 	<h3 class="title">New Who</h3>
         <div class="owl-carousel owl-theme">
                 <div class="item">
-                    <img class="box-filme" src="img\New_temporada12.jpg" alt="" srcset="">
+                    <a href="temporadas\t01.html">
+					<img class="box-filme" src="img\New_temporada12.jpg" alt="" srcset="">
+					</a>
                 </div>
                 <div class="item">
                     <img class="box-filme" src="img/New_temporada11.jpg" alt="" srcset="">
