--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 	   <footer>
     <div class="container">
       <div class="content">
-        <h4>Criado Por Guilherme Paiola de Castro Lima</h4>
+        <h4>Criado Por @GuiPCL :)</h4>
         <ul class="criador">
           <li><a href="https://beacons.ai/guilhermepdcl">Redes</a></li>
           <li><a href="https://github.com/GuiPCL">Github</a></li>
